feat : test gui